# dicers

./: .gitignore  Cargo.toml  README.md
src/: args.rs  dat.rs  dice.rs  inet_rand.rs  main.rs
