[package]
name = "rsdice"
version = "0.3.1"
authors = ["Tidle <tidle@users.noreply.github.com>"]
edition = "2018"
description = "a diceware password generator written in rust"
repository = "https://github.com/tidle/dicers"
license = "MIT AND Apache-2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.3"